src/objects/CI_ContactRoleWeight__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Exclude_From_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Instance number - only zero is supported at the moment</description>
        <label>Instance</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Opportunity contact role</description>
        <label>Role</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Weight for this contact role</description>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contact Role Weights</label>
</CustomObject>